Added a footer to index file

--- a/index.html
+++ b/index.html
@@ -50,9 +50,17 @@
         </div>
     </nav>
 
+    
     <div class="container">
         <h1 class="display-4">Hello, World!</h1>
     </div>
+
+    <!-- Footer Code -->
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Thanks For Using Our App</a>
+        </div>
+      </nav>
 
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
