--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles/navbar.css">
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
   <!-- Optional styles and scripts of your own -->
-  <link rel="stylesheet" href="/styles/login.css" />
+  <link rel="stylesheet" href="styles/login.css">
 
 </head>
 
