--- a/form.html
+++ b/form.html
@@ -61,10 +61,16 @@
             <br>
             <h5>Please Enter your Starting and Finishing Point Below:</h5>
             <label for="pickup">From:</label><br>
-            <input type="text" id="pickupLocation" name="pickup" required><br>
-            <label for="dropoff">To:</label><br>
-            <input type="text" id="dropoffLocation" name="dropoff" required><br><br>
-            <input type="submit" value="Compare Prices">
+            <input type="text" id="pickupLocation" name="pickup" required><br><br>
+            <p>To:(Choose between the locations)</p>
+            <button class = "drop1">YVR</button>
+            <button class = "drop2">BCIT Burnaby</button>
+            <button class = "drop3">BCIT Downtown Campus</button><br><br>
+
+            <!-- <input type="button" id="dropoffLocation1" name="dropoff" >
+            <input type="button" id="dropoffLocation1" name="dropoff" >
+            <input type="button" id="dropoffLocation1" name="dropoff" > -->
+            <button class = "compare">Compare Prices</button>
           </form>
     </div>
 
