--- a/list.html
+++ b/list.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/list.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9T3sZdGiRglZCOTU0fyxhZD02HrnnOUw&libraries=places"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
 
 
 
