--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/index.css">
 
@@ -35,16 +36,17 @@
     </a>
     <div class="navbar-links">
       <ul>
-        <li><span><i class="fa fa-user" aria-hidden="true"></i></span><a class="navbar-active" href="form.html">USER
+        <li class="loggedIn"><span><i class="fa fa-user" aria-hidden="true"></i></span><a class="" href="form.html">USER
             PROFILE</a></li>
-        <li><i class="fa fa-bar-chart" aria-hidden="true"></i><a class="navbar-active" href="form.html">COMPARE
+        <li class="loggedIn"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class="" href="form.html">COMPARE
             PRICES</a></li>
-        <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
+        <li class="loggedOut"><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
         </li>
-        <li><i class="fa fa-sign-in" aria-hidden="true"></i><a class="navbar-active" href="login.html">LOGIN</a></li>
-        <li><i class="fa fa-user-plus" aria-hidden="true"></i><a class="navbar-active" href="signup.html">SIGNUP</a>
+        <li class="loggedOut"><i class="fa fa-sign-in" aria-hidden="true"></i><a class="navbar-active" href="login.html">LOGIN</a></li>
+        <li class="loggedOut"><i class="fa fa-user-plus" aria-hidden="true"></i><a class="navbar-active" href="signup.html">SIGNUP</a>
         </li>
-
+        <li class="loggedIn"><i class="fa fa-sign-out" aria-hidden="true"></i><a class="navbar-active" href="">LOGOUT</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -60,7 +62,7 @@
             your journey.</p>
         </div>
         <div id='button-container'>
-          <a class="button1" href='/HelpPage.html'>Get Started</a>
+          <a class="button1" href='/login.html'>Get Started</a>
         </div>
       </div>
     </div>
