--- a/formcopy2.html
+++ b/formcopy2.html
@@ -14,7 +14,8 @@
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9T3sZdGiRglZCOTU0fyxhZD02HrnnOUw&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9T3sZdGiRglZCOTU0fyxhZD02HrnnOUw&libraries=places">
+    </script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/navbar.css">
@@ -26,7 +27,12 @@
         /* Always set the map height explicitly to define the size of the div
          * element that contains the map. */
         #map {
-            height: 100%;
+            height: 60%;
+            width: 80%;
+            margin-left: 10%;
+            margin-top: 10%;
+            border-radius: 12px 12px 12px 12px;
+            border: 5px double white;
         }
 
         /* Optional: Makes the sample page fill the window. */
@@ -35,50 +41,72 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            background: rgb(39, 38, 38);
         }
 
         .controls {
+            margin-bottom: 15px;
             margin-top: 10px;
-            border: 1px solid transparent;
-            border-radius: 2px 0 0 2px;
+            border: 6px double white;
+            border-radius: 12px 12px 12px 12px;
             box-sizing: border-box;
             -moz-box-sizing: border-box;
-            height: 32px;
+            height: 54px;
             outline: none;
+            background: transparent;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
         }
 
         #origin-input,
         #destination-input {
-            background-color: #fff;
+            background-color: black;
+            color: white;
             font-family: Roboto;
-            font-size: 15px;
-            font-weight: 300;
-            margin-left: 12px;
+            font-size: 13pt;
+            font-weight: 400;
+            margin-left: 5%;
             padding: 0 11px 0 13px;
             text-overflow: ellipsis;
-            width: 200px;
+            width: 90%;
         }
 
         #origin-input:focus,
         #destination-input:focus {
             border-color: #4d90fe;
         }
-        
+
+        ::placeholder {
+            /* Chrome, Firefox, Opera, Safari 10.1+ */
+            color: white;
+            opacity: 1;
+            /* Firefox */
+        }
+
+        :-ms-input-placeholder {
+            /* Internet Explorer 10-11 */
+            color: white;
+        }
+
+        ::-ms-input-placeholder {
+            /* Microsoft Edge */
+            color: white;
+        }
     </style>
 
     <script>
         // This example requires the Places library. Include the libraries=places
         // parameter when you first load the API. For example:
-        
+
         function initMap() {
             const map = new google.maps.Map(document.getElementById("map"), {
+                streetViewControl: false,
+                fullscreenControl: false,
                 mapTypeControl: false,
                 center: {
-                    lat: 49.1688,
-                    lng: -122.7195
+                    lat: 49.2588,
+                    lng: -122.9294
                 },
-                zoom: 10,
+                zoom: 9.2,
             });
             new AutocompleteDirectionsHandler(map);
         }
@@ -88,13 +116,13 @@
                 this.map = map;
                 this.originPlaceId = "";
                 this.destinationPlaceId = "";
-                this.travelMode = google.maps.TravelMode.WALKING;
+                this.travelMode = google.maps.TravelMode.DRIVING;
                 this.directionsService = new google.maps.DirectionsService();
                 this.directionsRenderer = new google.maps.DirectionsRenderer();
                 this.directionsRenderer.setMap(map);
                 const originInput = document.getElementById("origin-input");
                 const destinationInput = document.getElementById("destination-input");
-                const modeSelector = document.getElementById("mode-selector");
+                // const modeSelector = document.getElementById("mode-selector");
                 const originAutocomplete = new google.maps.places.Autocomplete(
                     originInput
                 );
@@ -122,12 +150,12 @@
                 this.map.controls[google.maps.ControlPosition.TOP_LEFT].push(
                     originInput
                 );
-                this.map.controls[google.maps.ControlPosition.TOP_LEFT].push(
+                this.map.controls[google.maps.ControlPosition.LEFT_TOP].push(
                     destinationInput
                 );
-                this.map.controls[google.maps.ControlPosition.TOP_LEFT].push(
-                    modeSelector
-                );
+                //this.map.controls[google.maps.ControlPosition.LEFT_TOP].push(
+                //    modeSelector
+                //);
             }
             // Sets a listener on a radio button to change the filter type on Places
             // Autocomplete.
@@ -218,44 +246,29 @@
     </nav>
 
     <div style="display: none">
-        <input
-          id="origin-input"
-          class="controls"
-          type="text"
-          placeholder="Enter an origin location"
-        />
-  
-        <input
-          id="destination-input"
-          class="controls"
-          type="text"
-          placeholder="Enter a destination location"
-        />
-  
+        <input id="origin-input" class="controls" type="text" placeholder="Enter a pickup location:"/>
+
+        <input id="destination-input" class="controls" type="text" placeholder="Enter a destination location:" />
+
         <div id="mode-selector" class="controls">
-          <input
-            type="radio"
-            name="type"
-            id="changemode-walking"
-            checked="checked"
-          />
-          <label for="changemode-walking">Walking</label>
-  
-          <input type="radio" name="type" id="changemode-transit" />
-          <label for="changemode-transit">Transit</label>
-  
-          <input type="radio" name="type" id="changemode-driving" />
-          <label for="changemode-driving">Driving</label>
+            <input type="radio" name="type" id="changemode-walking" checked="checked" />
+            <label for="changemode-walking">Walking</label>
+
+            <input type="radio" name="type" id="changemode-transit" />
+            <label for="changemode-transit">Transit</label>
+
+            <input type="radio" name="type" id="changemode-driving" />
+            <label for="changemode-driving">Driving</label>
         </div>
-      </div>
-  
-      <div id="map"></div>
-  
-      <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-      <script
+    </div>
+
+
+    <div id="map"></div>
+
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9T3sZdGiRglZCOTU0fyxhZD02HrnnOUw&callback=initMap&libraries=places&v=weekly"
-        async
-      ></script>
+        async></script>
 
     <!-- Footer Code -->
     <div id="footer">
