--- a/FAQs.html
+++ b/FAQs.html
@@ -64,57 +64,50 @@
     <div class="accordion FAQ-container" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button FAQ-question" type="button" data-bs-toggle="collapse"
+                <button id="q1" class="accordion-button FAQ-question" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Do I pay BESTRIDE directly?
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
-                <div class="accordion-body FAQ-answer">
-                    The answer to the frequently asked question would go here.
+                <div id="a1" class="accordion-body FAQ-answer">
                 </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
+                <button id="q2" class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Why do i need other apps installed to use BESTRIDE?
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                 data-bs-parent="#accordionExample">
-                <div class="accordion-body FAQ-answer">
-                    The answer to the frequently asked question would go here.</div>
+                <div id="a2" class="accordion-body FAQ-answer">
+                </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
+                <button id="q3" class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    What do you do with my personal information?
-
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                 data-bs-parent="#accordionExample">
-                <div class="accordion-body FAQ-answer">
-                    The answer to the frequently asked question would go here.  Details and next steps are provided.</div>
+                <div id="a3" class="accordion-body FAQ-answer">
+                </div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingFour">
-                <button class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
+                <button id="q4" class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    Can I become a driver?
-
                 </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                 data-bs-parent="#accordionExample">
-                <div class="accordion-body FAQ-answer">
-                    The answer to the frequently asked question would go here.  Details and next steps are provided.</div>
+                <div id="a4" class="accordion-body FAQ-answer">
+                </div>
             </div>
         </div>
     </div>
@@ -132,11 +125,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <script src="scripts/firebase_api_BESTRIDE.js"></script>
 
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
     <script src="scripts/navbar.js"></script>
+    <script src="scripts/FAQs.js"></script>
+
 
 
 </body>
