connecting to the database to read info for different car companies

--- a/formcopy2.html
+++ b/formcopy2.html
@@ -71,10 +71,12 @@
         <br>
 
 
-        <input type="button" value="Calculate Distance" onclick="calculateDistance()" href = "list.html">
+        <input type="button" value="Calculate Distance" onclick="calculateDistance()">
         <br>
         <input type="text" id="dist">
-        <button type="submit" value="Submit" href = "list.html">Get Estimate</button>
+        <input type="text" id="dura">
+
+        <button id = "submission" type="submit" value="Submit">Get Estimate</button>
         <div id="mode-selector" class="controls">
             <!-- <input type="radio" name="type" id="changemode-walking" checked="checked" /> -->
             <!-- <label for="changemode-walking">Walking</label>
