--- a/list.html
+++ b/list.html
@@ -51,13 +51,15 @@
 
   <div class="contain1">
     <div class=enter>
-      <p>Pickup Location Entered: <span class="start">Downtown Vancouver</span></p>
-      <p>Dropoff Location Entered: <span class="finish">BCIT</span></p>
+      <p>Pickup Location Entered: <span id="start"></span></p>
+      <p>Dropoff Location Entered: <span id="finish">BCIT</span></p>
       <p>Distance: <span id="totalDistance"></span></p>
+      <p>Duration: <span id="totalDuration"></span></p>
+
 
     </div>
     <div class="reenter">
-      <p>Enter Wrong Locations. Click the button below to Re-Enter</p>
+      <p>Entered Wrong Locations. Click the button below to Re-Enter</p>
       <button onclick="goBack()">Re-Enter Locations</button>
     </div>
   </div>
