--- a/FAQs.html
+++ b/FAQs.html
@@ -35,21 +35,25 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <li><span><i class="fa fa-user" aria-hidden="true"></i></span><a class="navbar-active"
-                        href="form.html">USER
-                        PROFILE</a></li>
-                <li><i class="fa fa-bar-chart" aria-hidden="true"></i><a class="navbar-active" href="form.html">COMPARE
-                        PRICES</a></li>
-                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active"
-                        href="help.html">HELP</a>
+                <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
+                    class="" href="form.html">USER
+                    PROFILE</a></li>
+                <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
+                    href="form.html">COMPARE
+                    PRICES</a></li>
+                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
                 </li>
-                <li><i class="fa fa-sign-in" aria-hidden="true"></i><a class="navbar-active" href="login.html">LOGIN</a>
+                <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+                    class="navbar-active" href="login.html">LOGIN</a></li>
+                <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+                    class="navbar-active"><span id="username"></span></a></li>
+                <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
+                    class="navbar-active" href="login.html">SIGNUP</a>
                 </li>
-                <li><i class="fa fa-user-plus" aria-hidden="true"></i><a class="navbar-active"
-                        href="signup.html">SIGNUP</a>
+                <li id="btnLogout" style="display:none;" class="logged-in"><i class="fa fa-sign-out" aria-hidden="true"></i><a
+                    class="navbar-active">LOGOUT</a>
                 </li>
-
-            </ul>
+              </ul>
         </div>
     </nav>
 
@@ -122,13 +126,18 @@
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
+  
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+  
     <script src="scripts/firebase_api_BESTRIDE.js"></script>
-
+    <script src="scripts/auth.js"></script>
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
