--- a/formcopy2.html
+++ b/formcopy2.html
@@ -43,20 +43,25 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <li><span><i class="fa fa-user" aria-hidden="true"></i></span><a class="navbar-active"
-                        href="form.html">USER
-                        PROFILE</a></li>
-                <li><i class="fa fa-bar-chart" aria-hidden="true"></i><a class="navbar-active" href="form.html">COMPARE
-                        PRICES</a></li>
-                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active"
-                        href="help.html">HELP</a>
+                <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
+                    class="" href="form.html">USER
+                    PROFILE</a></li>
+                <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
+                    href="form.html">COMPARE
+                    PRICES</a></li>
+                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
                 </li>
-                <li><i class="fa fa-sign-in" aria-hidden="true"></i><a class="navbar-active">LOGGED IN AS </a>
+                <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+                    class="navbar-active" href="login.html">LOGIN</a></li>
+                <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+                    class="navbar-active">LOGGED IN AS <span id="username"></span></a></li>
+                <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
+                    class="navbar-active" href="login.html">SIGNUP</a>
                 </li>
-                <li><i class="fa fa-user-plus" aria-hidden="true"></i><a class="navbar-active" id="btnLogout">LOGOUT</a>
+                <li id="btnLogout" style="display:none;" class="logged-in" id="btnLogout"><i class="fa fa-sign-out" aria-hidden="true"></i><a
+                    class="navbar-active">LOGOUT</a>
                 </li>
-
-            </ul>
+              </ul>
         </div>
     </nav>
 
@@ -73,25 +78,18 @@
         <br>
     </div>
 
-
     <div class="d-grid gap-2 col-6 mx-auto">
-        <a id = "submission" class="btn btn-outline-dark btn-xl" href="list.html"  onclick="calculateDistance()" role="button" type="submit">Get Estimate</a>
-        <br>
         <input type="text" id="dist">
         <input type="text" id="dura">
+        <a id = "submission" class="btn btn-outline-dark btn-xl" onclick="getEstimate()" role="button" type="submit">Get Estimate</a>
+        <br>
 
         <div id="mode-selector" class="controls">
-            <!-- <input type="radio" name="type" id="changemode-walking" checked="checked" /> -->
-            <!-- <label for="changemode-walking">Walking</label>
-  
-          <input type="radio" name="type" id="changemode-transit" />
-          <label for="changemode-transit">Transit</label> -->
 
             <input type="radio" name="type" id="changemode-driving" />
             <label for="changemode-driving">Driving</label>
         </div>
     </div>
-
 
     <!-- Footer Code -->
     <div id="footer">
@@ -103,12 +101,14 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9T3sZdGiRglZCOTU0fyxhZD02HrnnOUw&callback=initMap&libraries=places&v=weekly"
         async></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
 
     <script src="scripts/firebase_api_BESTRIDE.js"></script>
+    <script src="scripts/auth.js"></script>
 
     <script src="scripts/navbar.js"></script>
     <script src="scripts/formcopy.js"></script>
