--- a/help.html
+++ b/help.html
@@ -34,36 +34,44 @@
     </a>
     <div class="navbar-links">
       <ul>
-        <li><span><i class="fa fa-user" aria-hidden="true"></i></span><a class="navbar-active" href="form.html">USER
+        <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
+            class="" href="form.html">USER
             PROFILE</a></li>
-        <li><i class="fa fa-bar-chart" aria-hidden="true"></i><a class="navbar-active" href="form.html">COMPARE
+        <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
+            href="form.html">COMPARE
             PRICES</a></li>
         <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
         </li>
-        <li><i class="fa fa-sign-in" aria-hidden="true"></i><a class="navbar-active" href="login.html">LOGIN</a></li>
-        <li><i class="fa fa-user-plus" aria-hidden="true"></i><a class="navbar-active" href="signup.html">SIGNUP</a>
+        <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+            class="navbar-active" href="login.html">LOGIN</a></li>
+        <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+            class="navbar-active"><span id="username"></span></a></li>
+        <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
+            class="navbar-active" href="login.html">SIGNUP</a>
         </li>
-
+        <li id="btnLogout" style="display:none;" class="logged-in"><i class="fa fa-sign-out" aria-hidden="true"></i><a
+            class="navbar-active" href="">LOGOUT</a>
+        </li>
       </ul>
     </div>
   </nav>
 
-<!-- HelpPage starts here -->
+  <!-- HelpPage starts here -->
 
-    <header>
-      <h1>Help</h1>
-    </header>
+  <header>
+    <h1>Help</h1>
+  </header>
 
 
 
   <a class="btn btn-default" href="FAQs.html">
-      <img id="picFAQ" src="images/FAQ.jpg"a>
-      <p>FAQs</p>
+    <img id="picFAQ" src="images/FAQ.jpg" a>
+    <p>FAQs</p>
   </a>
 
-    <a class="btn btn-default" href="ContactUs.html">
-      <img id="picFAQ" src="images/contactUs.jpg"a>
-      <p>Contact Us</p>
+  <a class="btn btn-default" href="ContactUs.html">
+    <img id="picFAQ" src="images/contactUs.jpg" a>
+    <p>Contact Us</p>
   </a>
 
 
@@ -79,6 +87,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
   </script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+
+  <script src="scripts/firebase_api_BESTRIDE.js"></script>
+  <script src="scripts/auth.js"></script>
 
   <!--------------------------------------------------------------------->
   <!-- JS files: Your own JavaScript functions included here    -->
