--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My BCIT Project</title>
-  <meta name="comp1800 boilerplate code" content="my bcit project">
+  <meta name="comp1800 boilerplate code" content="COMP 1800 Team 13 project">
   <meta name="author" content="BCIT">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title>BestRide App Team 13</title>
 
   <!-- Bootstrap for Mobile-first, and JQuery -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/index.css">
-
-
 
 </head>
 
@@ -36,21 +36,29 @@
     </a>
     <div class="navbar-links">
       <ul>
-        <li class="loggedIn"><span><i class="fa fa-user" aria-hidden="true"></i></span><a class="" href="form.html">USER
+        <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
+            class="" href="form.html">USER
             PROFILE</a></li>
-        <li class="loggedIn"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class="" href="form.html">COMPARE
+        <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
+            href="form.html">COMPARE
             PRICES</a></li>
-        <li class="loggedOut"><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
+        <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
         </li>
-        <li class="loggedOut"><i class="fa fa-sign-in" aria-hidden="true"></i><a class="navbar-active" href="login.html">LOGIN</a></li>
-        <li class="loggedOut"><i class="fa fa-user-plus" aria-hidden="true"></i><a class="navbar-active" href="signup.html">SIGNUP</a>
+        <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+            class="navbar-active" href="login.html">LOGIN</a></li>
+        <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
+            class="navbar-active"><span id="username"></span></a></li>
+        <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
+            class="navbar-active" href="login.html">SIGNUP</a>
         </li>
-        <li class="loggedIn"><i class="fa fa-sign-out" aria-hidden="true"></i><a class="navbar-active" href="">LOGOUT</a>
+        <li id="btnLogout" style="display:none;" class="logged-in"><i class="fa fa-sign-out" aria-hidden="true"></i><a
+            class="navbar-active" href="">LOGOUT</a>
         </li>
       </ul>
     </div>
   </nav>
 
+  <!-- The main content on the page -->
   <div id="bg">
     <div class="banner"></div>
     <div class="background">
@@ -58,7 +66,8 @@
         <div id="para">
           <p id="p1">Tired of the high-priced Car Riding Options?</p>
           <p id="p2">Look no further!</p>
-          <p id="p3">Our app will compare prices among numerous <br> car riding options and present you with best prices for
+          <p id="p3">Our app will compare prices among numerous <br> car riding options and present you with best prices
+            for
             your journey.</p>
         </div>
         <div id='button-container'>
@@ -71,14 +80,24 @@
 
   <div id="footer">
     <p>2021 BESTRIDE INC. &copy; Copyright Team 13. All right reserved.</p>
-  </div>
+  </div> -->
 
   <!----------------------------------------------->
   <!-- JS: Boostrap, Firebase, API related    -->
   <!----------------------------------------------->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
   </script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+
+  <script src="scripts/firebase_api_BESTRIDE.js"></script>
+  <script src="scripts/auth.js"></script>
 
   <!--------------------------------------------------------------------->
   <!-- JS files: Your own JavaScript functions included here    -->
