--- a/formcopy2.html
+++ b/formcopy2.html
@@ -75,7 +75,9 @@
 
 
     <div class="d-grid gap-2 col-6 mx-auto">
-        <a id = "submission" class="btn btn-outline-dark btn-xl" href="list.html"  onclick="calculateDistance()" role="button" type="submit">Get Estimate</a>
+        <input onclick="calculateDistance()" role="button" />
+    </br>
+        <a id = "submission" class="btn btn-outline-dark btn-xl" href="list.html" role="button" type="submit">Get Estimate</a>
         <br>
         <input type="text" id="dist">
         <input type="text" id="dura">
