added stylesheets.  greeny is green with yellow, greenr is green with red.

--- a/formcopy2.html
+++ b/formcopy2.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/form.css">
-    <link rel="stylesheet" href="styles/formcopy.css">
+    <link rel="stylesheet" href="styles/formcopygreeny.css">
 
 
 
@@ -66,7 +66,7 @@
     </nav>
 
     <div id="header">
-        <h1>Compare Prices</h1>
+        <h1></h1>
     </div>
 
     <div id="map"></div>
