Changed .css files to the new color pallate.  Made it so that content will grow to 1200px, then stop, creating a white body background behind the content.  Set footer to sticky so that content is centered when 1200px is reached.

--- a/FAQs.html
+++ b/FAQs.html
@@ -59,10 +59,12 @@
 
     <!-- HelpPage starts here -->
 
-    <header>
-        <h1>FAQs</h1>
-    </header>
 
+
+
+<div id="contents">
+</br>
+</br>
 </br>
 </br>
     <div class="accordion FAQ-container" id="accordionExample">
@@ -115,6 +117,42 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
+  
+
 
 
 
