--- a/help.html
+++ b/help.html
@@ -58,22 +58,32 @@
 
   <!-- HelpPage starts here -->
 
-  <header>
-    <h1>Help</h1>
-  </header>
 
 
 
-  <a class="btn btn-default" href="FAQs.html">
+<div id="contents">
+  <div class="buttonDivs">
+  <a id="button1" class="btn btn-default" href="FAQs.html">
     <img id="picFAQ" src="images/FAQ.jpg" a>
     <p>FAQs</p>
   </a>
-
-  <a class="btn btn-default" href="ContactUs.html">
+</div>
+<div class="buttonDivs">
+  <a id="button2" class="btn btn-default" href="ContactUs.html">
     <img id="picFAQ" src="images/contactUs.jpg" a>
     <p>Contact Us</p>
   </a>
-
+</div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+</div>
 
 
   <!-- Footer Code -->
