--- a/login.html
+++ b/login.html
@@ -59,9 +59,9 @@
   <!-- HelpPage starts here -->
 
 
-  <header>
-    <h1>Welcome</h1>
-  </header>
+  <div>
+
+  </div>
 
   <div id="loginBackground">
     </br>
@@ -69,21 +69,7 @@
     </br>
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
+
   </div>
 
 
