Created individual .html pages and .js for reviews of each company. Each one writes and reads from a subcollection of the companies called reviews.

--- a/lyftReviews.html
+++ b/lyftReviews.html
@@ -16,86 +16,7 @@
 
   <!-- Optional styles and scripts of your own -->
   <script src="https://kit.fontawesome.com/f9fc02e319.js" crossorigin="anonymous"></script>
-  <style>
-    .fa-star {
-      font-size: 2rem;
-      cursor: pointer;
-      margin: 0px;
-    }
-
-    .form-control{
-      padding: 1rem;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    #contents{
-      background-color: #e8f6e8;
-      width: 1200px;
-      max-width: 100%;
-      margin: 0 auto;
-      border: 1px solid rgba(0, 0, 0, .5);
-    }
-
-    #reviewTitle{
-      margin-left: 1rem;
-    }
-
-    #reviewContent{
-      height: 10rem;
-      border: 1px solid rgba(0, 0, 0, .5);
-      margin-left: 1rem;
-    }
-
-    h2 {
-      margin-left: 1rem;
-    }
-    
-    label {
-      margin-left: 1rem;
-    }
-
-    button {
-      margin-left: 1rem;
-      
-    }
-    button:hover{
-      color:  #33a852;
-    }
-
-    #divRender{
-      margin-left: 1rem;
-    }
-
-    .form-control{
-      width: 95%;
-    }
-
-    #spacer{
-      background-color: #33a852;
-      opacity: .7;
-      height: 1px;
-      margin-left: 1rem;
-    }
-
-    #existingDetailsInput {
-      margin: 1rem 0 1rem 1rem;
-    }
-
-    #existingDetailsInput + div {
-      margin-left: 1rem;
-    }
-
-    #newDetailsInput {
-      margin: 1rem 0 1rem 1rem;
-    }
-
-    i {
-      margin-left: 1rem;
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="styles/reviews.css">
 
 </head>
 
@@ -143,7 +64,7 @@
       <div>
         <br>
         <div>
-          <h2>Uber Reviews</h2>
+          <h2>Lyft Reviews</h2>
         </div>
         <div>
           <form>
@@ -205,7 +126,7 @@
   <!-- JS files: Your own JavaScript functions included here    -->
   <!--------------------------------------------------------------------->
   <script src="scripts/navbar.js"></script>
-  <script src="scripts/feedbackTemplate.js"></script>
+  <script src="scripts/lyftReviews.js"></script>
 
 
 </body>
