--- a/formcopy2.html
+++ b/formcopy2.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/form.css">
-    <link rel="stylesheet" href="styles/formcopygreeny.css">
+    <link rel="stylesheet" href="styles/formcopygreenr.css">
 
 
 
@@ -34,6 +34,13 @@
     <!-------------------------------------->
     <!-- Header Navigation Bar -->
 
+    <div id="blackout">
+        <div id="box">
+          Popup window!<br>
+          <a href="#" class="close">Close window</a>
+        </div>
+      </div>
+
     <nav class="navbar">
         <div class="brand-title">BESTRIDE</div>
         <a href="#" class="toggle-button">
@@ -44,24 +51,23 @@
         <div class="navbar-links">
             <ul>
                 <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
-                    class="" href="form.html">USER
-                    PROFILE</a></li>
-                <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
-                    href="form.html">COMPARE
-                    PRICES</a></li>
-                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
+                        class="" href="/profile.html">USER PROFILE</a></li>
+                <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a
+                        class="" href="formcopy2.html">COMPARE PRICES</a></li>
+                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active"
+                        href="help.html">HELP</a>
                 </li>
                 <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
-                    class="navbar-active" href="login.html">LOGIN</a></li>
+                        class="navbar-active" href="login.html">LOGIN</a></li>
                 <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
-                    class="navbar-active">LOGGED IN AS <span id="username"></span></a></li>
+                        class="navbar-active">LOGGED IN AS <span id="username"></span></a></li>
                 <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
-                    class="navbar-active" href="login.html">SIGNUP</a>
+                        class="navbar-active" href="login.html">SIGNUP</a>
                 </li>
-                <li id="btnLogout" style="display:none;" class="logged-in" id="btnLogout"><i class="fa fa-sign-out" aria-hidden="true"></i><a
-                    class="navbar-active">LOGOUT</a>
+                <li id="btnLogout" style="display:none;" class="logged-in" id="btnLogout"><i class="fa fa-sign-out"
+                        aria-hidden="true"></i><a class="navbar-active">LOGOUT</a>
                 </li>
-              </ul>
+            </ul>
         </div>
     </nav>
 
@@ -81,7 +87,8 @@
     <div class="d-grid gap-2 col-6 mx-auto">
         <input type="text" id="dist">
         <input type="text" id="dura">
-        <a id = "submission" class="btn btn-outline-dark btn-xl" onclick="getEstimate()" role="button" type="submit">Get Estimate</a>
+        <a id="submission" class="btn btn-outline-dark btn-xl" onclick="getEstimate()" role="button" type="submit">Get
+            Estimate</a>
         <br>
 
         <div id="mode-selector" class="controls">
