Made theindex page responsive, style changes to navbar and formcopy page

--- a/help.html
+++ b/help.html
@@ -35,17 +35,17 @@
     <div class="navbar-links">
       <ul>
         <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
-            class="" href="form.html">USER
+            class="logged-in" href="profile.html">USER
             PROFILE</a></li>
         <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
-            href="form.html">COMPARE
+            href="formcopy2.html">COMPARE
             PRICES</a></li>
         <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
         </li>
         <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
             class="navbar-active" href="login.html">LOGIN</a></li>
         <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
-            class="navbar-active"><span id="username"></span></a></li>
+            class="navbar-active">LOGGED IN AS<span id="username"></span></a></li>
         <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
             class="navbar-active" href="login.html">SIGNUP</a>
         </li>
@@ -58,32 +58,29 @@
 
   <!-- HelpPage starts here -->
 
-
-
-
-<div id="contents">
-  <div class="buttonDivs">
-  <a id="button1" class="btn btn-default" href="FAQs.html">
-    <img id="picFAQ" src="images/FAQ.jpg" a>
-    <p>FAQs</p>
-  </a>
-</div>
-<div class="buttonDivs">
-  <a id="button2" class="btn btn-default" href="ContactUs.html">
-    <img id="picFAQ" src="images/contactUs.jpg" a>
-    <p>Contact Us</p>
-  </a>
-</div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-</div>
+  <div id="contents">
+    <div class="buttonDivs">
+      <a id="button1" class="btn btn-default" href="FAQs.html">
+        <img id="picFAQ" src="images/FAQ.jpg" a>
+        <p>FAQs</p>
+      </a>
+    </div>
+    <div class="buttonDivs">
+      <a id="button2" class="btn btn-default" href="ContactUs.html">
+        <img id="picFAQ" src="images/contactUs.jpg" a>
+        <p>Contact Us</p>
+      </a>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
 
 
   <!-- Footer Code -->
