--- a/FAQs.html
+++ b/FAQs.html
@@ -36,126 +36,90 @@
         <div class="navbar-links">
             <ul>
                 <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
-                    class="" href="form.html">USER
-                    PROFILE</a></li>
-                <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
-                    href="form.html">COMPARE
-                    PRICES</a></li>
-                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
+                        class="" href="profile.html">USER
+                        PROFILE</a></li>
+                <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a
+                        class="" href="formcopy2.html">COMPARE
+                        PRICES</a></li>
+                <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active"
+                        href="help.html">HELP</a>
                 </li>
                 <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
-                    class="navbar-active" href="login.html">LOGIN</a></li>
+                        class="navbar-active" href="login.html">LOGIN</a></li>
                 <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
-                    class="navbar-active"><span id="username"></span></a></li>
+                        class="navbar-active">LOGGED IN AS<span id="username"></span></a></li>
                 <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
-                    class="navbar-active" href="login.html">SIGNUP</a>
+                        class="navbar-active" href="login.html">SIGNUP</a>
                 </li>
-                <li id="btnLogout" style="display:none;" class="logged-in"><i class="fa fa-sign-out" aria-hidden="true"></i><a
-                    class="navbar-active">LOGOUT</a>
+                <li id="btnLogout" style="display:none;" class="logged-in"><i class="fa fa-sign-out"
+                        aria-hidden="true"></i><a class="navbar-active">LOGOUT</a>
                 </li>
-              </ul>
+            </ul>
         </div>
     </nav>
 
     <!-- HelpPage starts here -->
-
-
-
-
-<div id="contents">
-</br>
-</br>
-</br>
-</br>
-    <div class="accordion FAQ-container" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-                <button id="q1" class="accordion-button FAQ-question" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample">
-                <div id="a1" class="accordion-body FAQ-answer">
+    <div class="wrapper">
+        <div id="subHead">
+            <div class="reenter">
+                <button onclick="goBack()"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+            </div>
+            <div id="title-of-page">FAQs</div>
+        </div>
+        <div class="accordion FAQ-container" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button id="q1" class="accordion-button FAQ-question" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div id="a1" class="accordion-body FAQ-answer">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button id="q2" class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
-                <div id="a2" class="accordion-body FAQ-answer">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button id="q2" class="accordion-button collapsed FAQ-question" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                        aria-controls="collapseTwo">
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div id="a2" class="accordion-body FAQ-answer">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-                <button id="q3" class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                data-bs-parent="#accordionExample">
-                <div id="a3" class="accordion-body FAQ-answer">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button id="q3" class="accordion-button collapsed FAQ-question" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                        aria-controls="collapseThree">
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div id="a3" class="accordion-body FAQ-answer">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingFour">
-                <button id="q4" class="accordion-button collapsed FAQ-question" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                </button>
-            </h2>
-            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
-                data-bs-parent="#accordionExample">
-                <div id="a4" class="accordion-body FAQ-answer">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button id="q4" class="accordion-button collapsed FAQ-question" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                        aria-controls="collapseFour">
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div id="a4" class="accordion-body FAQ-answer">
+                    </div>
                 </div>
             </div>
-        </div>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-</div>
-  
-
-
-
-
     <!-- Footer Code -->
     <div id="footer">
         <p>2021 BESTRIDE INC. &copy; Copyright Team 13. All right reserved.</p>
@@ -166,14 +130,14 @@
     <!----------------------------------------------->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
-  
+
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
-  
+
     <script src="scripts/firebase_api_BESTRIDE.js"></script>
     <script src="scripts/auth.js"></script>
     <!--------------------------------------------------------------------->
