Commiting to save the work in help.html so the merge dosen't overwrite it

--- a/listwithreviews.html
+++ b/listwithreviews.html
@@ -319,31 +319,41 @@
   </div>
 
   <!-- Code for the main Contents of the page -->
+
+
   <div class="contain2">
     <div id="list">
       <div class="listOpt comp1">
-        <p><img id="compImg1" src=""><br> <br> <span id="compName1"><span><br></p>
+        <div id = "uber-color">UBER</div>
+        <p><img id="compImg1" src=""><br><span id="compName1"><span><br></p>
         <p id="type1"></p>
-        <p>Price: $<span id="uberPrice"></span><br><br><br><button href="company1.html">More Info</button></p>
-        <a href="#" data-bs-toggle="modal" data-bs-target="#uberModal"> Reviews </a>
+        <p>Price: $<span id="uberPrice"></span></p>
+        <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#uberModal"> Reviews </a>
+          <button href="company1.html">Get App</button></div>
       </div>
       <div class="listOpt comp2">
-        <p><img id="compImg2" src=""><br><br><span id="compName2"><span><br></p>
+        <div id = "lyft-color">LYFT</div>
+        <p><img id="compImg2" src=""><br><span id="compName2"><span><br></p>
         <p id="type2"></p>
-        <p>Price: $<span id="lyftPrice"></span><br><br><br><button href="company2.html">More Info</button></p>
-        <a href="#" data-bs-toggle="modal" data-bs-target="#lyftModal"> Reviews </a>
+        <p>Price: $<span id="lyftPrice"></span></p>
+        <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#lyftModal"> Reviews </a>
+          <button href="company1.html">Get App</button></div>
       </div>
       <div class="listOpt comp3">
-        <p><img id="compImg3" src=""><br><br><span id="compName3"><span><br></p>
+        <div id = "evo-color">EVO</div>
+        <p><img id="compImg3" src=""><br><span id="compName3"><span><br></p>
         <p id="type3"></p>
-        <p>Price: $<span id="evoPrice"></span><br><br><br><button href="company3.html">More Info</button></p>
-        <a href="#" data-bs-toggle="modal" data-bs-target="#evoModal"> Reviews </a>
+        <p>Price: $<span id="evoPrice"></span></p>
+        <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#evoModal"> Reviews </a>
+          <button href="company1.html">Get App</button></div>
       </div>
       <div class="listOpt comp4">
-        <p><img id="compImg4" src=""><br><br><span id="compName4"><span><br></p>
+        <div id = "modo-color">MODO</div>
+        <p><img id="compImg4" src=""><br><span id="compName4"><span><br></p>
         <p id="type4"></p>
-        <p>Price: $<span id="modoPrice"></span><br><br><br><button href="company4.html">More Info</button></p>
-        <a href="#" data-bs-toggle="modal" data-bs-target="#modoModal"> Reviews </a>
+        <p>Price: $<span id="modoPrice"></p>
+        <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#modoModal"> Reviews </a>
+          <button href="company1.html">Get App</button></div>
       </div>
     </div>
   </div>
