--- a/help.html
+++ b/help.html
@@ -34,12 +34,8 @@
     </a>
     <div class="navbar-links">
       <ul>
-        <li style="display:none;" class="logged-in"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
-            class="logged-in" href="profile.html">USER
-            PROFILE</a></li>
-        <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
-            href="formcopy2.html">COMPARE
-            PRICES</a></li>
+        <li style="display:none;" class="logged-in"><i class="fa fa-user" aria-hidden="true"></i><a href="profile.html">USER PROFILE</a></li>
+        <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a href="formcopy2.html">COMPARE PRICES</a></li>
         <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
         </li>
         <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
