Fixing small bugs of linking pages

--- a/help.html
+++ b/help.html
@@ -34,6 +34,7 @@
     </a>
     <div class="navbar-links">
       <ul>
+
         <li style="display:none;" class="logged-in"><i class="fa fa-user" aria-hidden="true"></i><a
             href="profile.html">USER PROFILE</a></li>
         <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a
@@ -64,7 +65,7 @@
       </a>
     </div>
     <div class="buttonDivs">
-      <a id="button2" class="btn btn-default" href="ContactUs.html">
+      <a id="button2" class="btn btn-default" href="AboutUs.html">
         <img id="picFAQ" src="images/contactUs.jpg" a>
         <p>Contact Us</p>
       </a>
